# Gtk-Glyph-Viewer

./: CMakeLists.txt  README.md
res/: interface.glade
src/: analysis.c  analysis.h  controls.c  controls.h  dialog_changecolors.c  dialog_changecolors.h  dialog_gotochar.c  dialog_gotochar.h  dialog_gotoindex.c  dialog_gotoindex.h  dialog_selectface.c  dialog_selectface.h  freetype_internal_impl.c  freetype_internal_impl.h  glyphblending.c  glyphblending.h  glyphviewerglobals.h  interface.glade.c  interface.glade.h  main.c  outlineprocessing.c  outlineprocessing.h  utils.c  utils.h
tools/: generate_gtkbuilder_string.sh
